[package]
name = "oxcc"
version = "0.0.1"
authors = ["jonlamb-gh <lamb.jon.io@gmail.com>"]

[dependencies.panic-abort]
version = "0.2.0"
optional = true

[dependencies.panic-semihosting]
version = "0.3.0"
optional = true

[dependencies.cortex-m-semihosting]
version = "0.3.0"
optional = true

[dependencies.cortex-m]
version = "0.5.4"
features = ["const-fn"]

[dependencies.cortex-m-rt]
version = "0.5.2"
features = ["device"]

[dependencies.nucleo-f767zi]
version = "0.0.1"
git = "https://github.com/jonlamb-gh/nucleo-f767zi.git"
branch = "devel"
features = ["rt"]

[dependencies.num]
version = "0.2"
default-features = false

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.0"

[dependencies.typenum]
version = "1.1.0"
default-features = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations

# TODO - should this live in the BSP crate?
# panic-over-serial = []
[features]
default = ["kia-soul-ev", "panic-over-semihosting"]
kia-soul-ev = []
kia-soul-petrol = []
kia-niro = []
panic-over-semihosting = ["cortex-m-semihosting", "panic-semihosting"]
panic-over-abort = ["panic-abort"]
